# ctr-prediction-on-gcp

./: .env.example  .gitignore  Dockerfile  README.md  build_and_push.sh  pyproject.toml
pipelines/: compile.py  ctr_pipeline.py  submit_pipeline.py
sql/: create_feature_view.sql
src/: bq_load.py  config.py  evaluate.py  preprocess.py  run_query.py  run_serving.py  serving_request.py  train.py  vertex_request.py
terraform/: main.tf  outputs.tf  variables.tf
